# investment-portfolio-api

./: .env.example  README.md  pyproject.toml
.github/workflows/: deploy_main.yaml  terraform-apply.yaml  terraform-destroy.yaml  terraform-plan.yaml
infra/: cloudbuild.yaml
infra/config/: main.yaml
infra/terraform/: variables.tf
src/domain/model/: ohlc.py
src/domain/usecases/: notification_sender.py  ohlc_generator.py  rsi_calculator.py
src/domain/usecases/interfaces/: ohlc_repository.py  sync_client_notifier_adapter.py
src/factories/: notification_sender_usecase.py  ohlc_generator_usecase.py  trade_action_report_generator_controller.py
src/infra/external_db/: ohlc_repository.py
src/infra/notifiers/: sync_client_notifier_adapter.py
src/main/config/: settings.py
src/main/routes/: trade_action_report_generator_routes.py
src/presentation/controllers/: trade_action_report_generator.py
