[tool.poetry]
name = "investment-portfolio-api"
version = "0.1.0"
description = ""
authors = ["felipesilvaibi <felipe_ibirama@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
pydantic = "^2.6.3"
uvicorn = "^0.27.1"
loguru = "^0.7.2"
pydantic-settings = "^2.2.1"
pandas = "^2.2.1"
numpy = "^1.26.4"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
